2012-09-12  Michael Saboff  <msaboff@apple.com>

        Build fixed for http://trac.webkit.org/changeset/128243

        Unreviewed build fix.

        Change UnicodeString::extract for gcc based on ICU fix described in
        http://bugs.icu-project.org/trac/ticket/8197.

        * icu/unicode/unistr.h:
        (UnicodeString::extract):

2012-09-12  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: NMI move String* instrumentation to wtf.
        https://bugs.webkit.org/show_bug.cgi?id=96405

        Reviewed by Yury Semikhatsky.

        This instrumentation is solving the problem with substrings and removes traits based code which is hard to upstream.

        Tested by webkit_unit_tests.

        * wtf/text/AtomicString.h:
        (AtomicString):
        (WTF::AtomicString::reportMemoryUsage):
        * wtf/text/StringImpl.h:
        (StringImpl):
        (WTF::StringImpl::reportMemoryUsage):
        * wtf/text/WTFString.h:
        (String):
        (WTF::String::reportMemoryUsage):

2012-09-12  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r128279.
        http://trac.webkit.org/changeset/128279
        https://bugs.webkit.org/show_bug.cgi?id=96487

        "Snow Leopard compilation broken" (Requested by yurys on
        #webkit).

        * wtf/MemoryInstrumentation.h:
        (GenericMemoryTypes):
        (WebCore):
        (WebCore::MemoryInstrumentation::addRootObject):
        (WebCore::MemoryObjectInfo::reportObjectInfo):
        (WebCore::MemoryClassInfo::MemoryClassInfo):
        * wtf/text/AtomicString.h:
        (AtomicString):
        * wtf/text/StringImpl.h:
        * wtf/text/WTFString.h:

2012-09-12  Yury Semikhatsky  <yurys@chromium.org>

        Web Inspector: Persistent handle referenced from ScriptWrappable is double counted
        https://bugs.webkit.org/show_bug.cgi?id=96483

        Reviewed by Alexander Pavlov.

        * wtf/MemoryInstrumentation.h: